# kaggle-tabular-series

./: .gitignore  README.md  pyproject.toml  requirements.txt
april-2025/: fit.py  log.md  playground.ipynb  submission.csv
jan-2022/: explore.ipynb  solution.ipynb
src/common/: preprocessing.py  utils.py
src/contests/april-2025/: fit.py  log.md  playground.ipynb  submission.csv
src/contests/may-2025/: ensemble.ipynb  feature_importance.ipynb  fit.py  merge_l1_preds.ipynb  playground.ipynb  prune_features.ipynb  ridge_weights.csv
src/tests/: test_target_encoding.py
